--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    // Paso 1.1
     id 'kotlin-kapt'
     id 'com.google.dagger.hilt.android'
 }
@@ -50,23 +51,6 @@ android {
 
 dependencies {
 
-
-    // Room
-    def room_version = "2.5.1"
-    implementation "androidx.room:room-ktx:$room_version"
-    kapt "androidx.room:room-compiler:$room_version"
-
-    //  Dagger Hilt
-    implementation 'com.google.dagger:hilt-android:2.46.1'
-    kapt 'com.google.dagger:hilt-compiler:2.46.1'
-
-    //Navigation
-    def nav_version = "2.5.3"
-    implementation("androidx.navigation:navigation-compose:$nav_version")
-
-    // Swipe
-    implementation 'me.saket.swipe:swipe:1.1.1'
-
     implementation 'androidx.core:core-ktx:1.8.0'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
     implementation 'androidx.activity:activity-compose:1.5.1'
@@ -82,4 +66,21 @@ dependencies {
     androidTestImplementation 'androidx.compose.ui:ui-test-junit4'
     debugImplementation 'androidx.compose.ui:ui-tooling'
     debugImplementation 'androidx.compose.ui:ui-test-manifest'
+
+    // V-112,Bloque 13, Paso 1.0 Dependencias
+    // Room -> Bases de datos
+    def room_version = "2.5.1"
+    implementation "androidx.room:room-ktx:$room_version"
+    kapt "androidx.room:room-compiler:$room_version"
+
+    //  Dagger Hilt -> Dependency Injection
+    implementation 'com.google.dagger:hilt-android:2.46.1'
+    kapt 'com.google.dagger:hilt-compiler:2.46.1'
+
+    // Navigation -> Navegacion
+    def nav_version = "2.5.3"
+    implementation("androidx.navigation:navigation-compose:$nav_version")
+
+    // Swipe -> Swipes
+    implementation 'me.saket.swipe:swipe:1.1.1'
 }
