--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <!--Paso 3.1 , le indiciamos al manifest de la inyecion
+    .CronosApplication es nuestra clase creada-->
     <application
         android:name=".CronosApplication"
         android:allowBackup="true"
