--- a/build.gradle
+++ b/build.gradle
@@ -3,5 +3,6 @@ plugins {
     id 'com.android.application' version '8.7.3' apply false
     id 'com.android.library' version '8.7.3' apply false
     id 'org.jetbrains.kotlin.android' version '1.7.20' apply false
+    //Paso 1.2
     id 'com.google.dagger.hilt.android' version '2.46.1' apply false
 }
